cmake_minimum_required(VERSION 2.6)
ADD_DEFINITIONS(-std=c++11 -g -O0)
add_subdirectory(01-join)
add_subdirectory(02-join-ref)
add_subdirectory(03-2join-ref)
add_subdirectory(04-condition-varible)
add_subdirectory(05-async)
add_subdirectory(05.5-producer-consumer)
add_subdirectory(06-mutex)
add_subdirectory(07-hierarchy-mutex)
add_subdirectory(08-wrong-granule-mutex)
add_subdirectory(09-memory-order-implicit)
add_subdirectory(10-std-packaged-task-sync)
add_subdirectory(11-std-packaged-task-async)
add_subdirectory(12-std-promise-sync)
add_subdirectory(13-std-promise-async)
